Remove redundant build flags; enforce java 17 more tightly